--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.jakewharton:butterknife:6.1.0'
     provided 'pl.mg6.hrisey:hrisey:0.3.1'
+    compile 'com.squareup:otto:1.3.6'
 }
